# agent-hub

./: .gitignore  .index.yaml  .pre-commit-config.yaml  CLAUDE.md  memory-audit-report.md  memory-test-iteration.md  memory-test-state.json  plan.json
backend/: .env.example  package.json  pyproject.toml  pytest.ini
backend/agents/: __init__.py  base.py  registry.py
backend/app/: __init__.py  celery_app.py  config.py  constants.py  db.py  main.py  models.py  monkey_fight.py
backend/app/adapters/: __init__.py  base.py  claude.py  gemini.py  gemini_image.py  image_base.py  openai.py
backend/app/api/: __init__.py  access_control.py  access_control_helpers.py  access_control_logs.py  access_control_metrics.py  access_control_schemas.py  admin.py  agents.py  analytics.py  api_keys.py  complete.py  credentials.py  db.py  events.py  feedback.py  global_instructions.py  health.py  image.py  mcp.py  memory.py  memory_agent_handlers.py  memory_agent_schemas.py  memory_agent_tools.py  memory_bulk_ops.py  memory_metrics.py  memory_rating.py  memory_schemas.py  memory_settings.py  models.py  openai_compat.py  orchestration.py  orchestration_models.py  preferences.py  sessions.py  stream.py  webhooks.py
backend/app/core/: __init__.py  debug.py
backend/app/middleware/: __init__.py  access_control.py  kill_switch.py
backend/app/models/: __init__.py  agent.py  base.py  client.py  config.py  memory.py  roundtable.py  session.py  telemetry.py
backend/app/services/: __init__.py  agent_routing.py  agent_runner.py  agent_service.py  api_key_auth.py  circuit_breaker.py  client_auth.py  completion.py  container_manager.py  context_manager.py  context_tracker.py  cost_tracker.py  credential_manager.py  error_tracking.py  events.py  graphiti_service.py  health_prober.py  memory_webhook_handler.py  model_mapping.py  model_registry.py  provider_chain.py  rate_limiter.py  request_executor.py  request_queue.py  response_cache.py  router.py  session_cleanup.py  stream_registry.py  telemetry.py  tier_classifier.py  tier_selection.py  token_counter.py  webhooks.py
backend/app/storage/: __init__.py  credentials.py  feedback.py  preferences.py
backend/app/tasks/: __init__.py  session_cleanup.py  session_cleanup_task.py  tier_optimizer_task.py  webhook_tasks.py
backend/docs/: sdk-session-research.md
backend/migrations/: add_injection_tier.cypher  env.py
backend/migrations/versions/: 07e7336a2688_add_per_tier_limits_to_memory_settings.py  17cdcc56e5bd_initial_schema_sessions_messages_.py  1c6805054b00_add_provider_metadata_to_sessions.py  27229f433f34_add_truncation_events_table.py  2db02fafe6f7_add_roundtable_session_and_message_.py  548fe3a69c99_add_api_keys_table.py  5d106fee3146_extend_api_key_prefix_length.py  6b46071ec3b1_remove_max_tokens_from_agents.py  78ebdaac1078_mark_legacy_sessions.py  86bacf829f75_add_access_control_tables.py  8939a1bd7848_merge_heads.py  98f371912aa2_add_agent_id_to_messages.py  a1b2c3d4e5f6_add_usage_stats_table.py  b2c3d4e5f6g7_add_memory_uuids_to_feedback.py  b9f50737450a_add_webhook_subscriptions_table.py  c3d4e5f6g7h8_add_client_purpose_control_tables.py  c7a82f0e9b12_add_external_id_to_sessions.py  cd269ebb1e0d_migrate_to_timestamptz.py  d4e5f6g7h8i9_add_agent_session_type.py  e281dbbb5cf4_add_llm_models_table.py  e5f6g7h8i9j0_add_agents_table.py  eb4ecc28ced9_add_multi_model_tracking_columns.py  ed13ea976211_add_purpose_and_session_type.py  f0a1b2c3d4e5_restore_timestamp_defaults.py  g6h7i8j9k0l1_add_memory_injection_metrics.py  h7i8j9k0l1m2_drop_mandate_tags_column.py  i8j9k0l1m2n3_add_memory_settings_table.py  j9k0l1m2n3o4_add_budget_enabled_column.py  k0l1m2n3o4p5_add_tier_change_log_table.py  l1m2n3o4p5q6_add_usage_metric_types.py  m2n3o4p5q6r7_add_global_instructions_table.py  n3o4p5q6r7s8_add_tool_tracking_columns.py  o4p5q6r7s8t9_add_tool_name_columns.py  p5q6r7s8t9u0_add_agent_slug_to_sessions.py  q6r7s8t9u0v1_remove_purpose_from_sessions.py  r7s8t9u0v1w2_remove_purpose_control_tables.py  s8t9u0v1w2x3_add_reference_index_enabled.py  t9u0v1w2x3y4_add_allowed_projects_to_clients.py
backend/prompts/: coder.md  designer.md  explorer.md  fixer.md  planner.md  qa.md  qa_plan_defect.md  reviewer.md  safety_directive.md  validator.md
backend/scripts/: claude-pty-wrapper.py  claude-tty-wrapper.sh  cleanup_test_logs.py  collect_baseline_metrics.py  fix_episode_timestamps.py  migrate_rules_to_graphiti.py  run_parameter_sweep.py  seed_agents.py  sweep_config.py  sweep_evaluation.py  sweep_report.py  test_oauth_isolation.py
backend/scripts/memory/: __init__.py  add_content_hashes.py  add_injection_tier.py  audit_episodes.py  backup.py  cleanup_legacy.py  consolidate_duplicates.py  fix_mandate_format.py  inventory.py  migrate_mandates.py  rule_categorization.py  rule_parser.py  st_cli_splitter.py
backend/tasks/intelligent-context-management/: plan.json
backend/tests/: __init__.py  conftest.py  test_models.py  test_monkey_fight.py
backend/tests/adapters/: test_claude.py  test_gemini.py  test_interface.py
backend/tests/analytics/: test_cost.py
backend/tests/api/: test_access_control.py  test_agents_api.py  test_cancel_endpoint.py  test_complete.py  test_complete_streaming.py  test_credentials.py  test_feedback.py  test_health.py  test_image.py  test_kill_switch.py  test_memory.py  test_models.py  test_openai_auth.py  test_openai_compat.py  test_openai_sdk_compat.py  test_preferences.py  test_sessions.py  test_stream.py  test_stream_cancel.py  test_webhooks.py
backend/tests/core/: test_rate_limiter.py  test_router.py  test_tier_classifier.py
backend/tests/e2e/: __init__.py  test_session_tracking.py
backend/tests/events/: test_memory_integration.py  test_webhooks.py  test_websocket.py
backend/tests/integration/: test_learning_loop.py  test_status_endpoint.py
backend/tests/mcp/: __init__.py  test_auth.py  test_client.py  test_registry.py  test_server.py
backend/tests/orchestration/: test_maker_checker.py  test_parallel.py  test_roundtable.py  test_subagent.py  test_telemetry.py
backend/tests/scripts/: test_collect_baseline_metrics.py
(+453 files in other folders)
