[project]
name = "agent-hub"
version = "0.1.0"
description = "Unified agentic AI service for Claude/Gemini workloads"
requires-python = ">=3.13"
dependencies = [
    # Core API framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Database
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",  # Async PostgreSQL for access control

    # HTTP client
    "httpx>=0.28.0",

    # Background tasks
    "celery>=5.4.0",
    "redis>=5.0.0",

    # AI integrations
    "anthropic>=0.40.0",
    "claude-agent-sdk>=0.1.19",  # OAuth via Claude CLI (zero API cost)
    "google-genai>=1.0.0",  # Gemini API client
    "graphiti-core[google-genai]>=0.26.0",  # Knowledge graph for memory system
    "tiktoken>=0.7.0",  # Token counting for context management

    # Retry logic
    "tenacity>=8.2.0",

    # Security
    "cryptography>=43.0.0",
    "bcrypt>=4.0.0",

    # JSON validation
    "jsonschema>=4.20.0",

    # CLI (optional)
    "typer>=0.15.0",
    "rich>=13.0.0",

    # Voice
    "edge-tts>=6.1.0",  # TTS
    "faster-whisper>=1.0.0",  # STT

    # Observability
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-exporter-otlp>=1.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
# Suppress noisy errors that don't add value (SQLAlchemy Column types, etc.)
disable_error_code = [
    "type-arg",      # Missing type params for generic (dict, tuple, Queue)
    "no-any-return", # Returning Any from typed function
    "arg-type",      # Argument type mismatches (common with SQLAlchemy Column)
    "assignment",    # Incompatible types in assignment (SQLAlchemy)
    "var-annotated", # Need type annotation (SQLAlchemy mapped columns)
    "no-untyped-def", # Missing type annotations
    "no-untyped-call", # Call to untyped function (redis, etc.)
    "dict-item",     # Dict entry has incompatible type
    "index",         # Invalid index type (Column as key)
    "call-overload", # No overload variant matches
    "misc",          # Various misc errors
    "return-value",  # Return type mismatches
    "unused-ignore", # Stale type: ignore comments
    "attr-defined",  # Attribute not explicitly defined
    "truthy-function", # Function could always be true (SQLAlchemy count)
    "list-item",     # List item type mismatch
    "untyped-decorator", # Untyped decorator (Celery tasks)
]

[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["redis", "redis.*"]
ignore_missing_imports = true
