[project]
name = "agent-hub"
version = "0.1.0"
description = "Unified agentic AI service for Claude/Gemini workloads"
requires-python = ">=3.13"
dependencies = [
    # Core API framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Database
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",  # Async PostgreSQL for access control

    # HTTP client
    "httpx>=0.28.0",

    # Background tasks
    "celery>=5.4.0",
    "redis>=5.0.0",

    # AI integrations
    "anthropic>=0.40.0",
    "claude-agent-sdk>=0.1.19",  # OAuth via Claude CLI (zero API cost)
    "google-genai>=1.0.0",  # Gemini API client
    "graphiti-core[google-genai]>=0.26.0",  # Knowledge graph for memory system
    "tiktoken>=0.7.0",  # Token counting for context management

    # Retry logic
    "tenacity>=8.2.0",

    # Security
    "cryptography>=43.0.0",
    "bcrypt>=4.0.0",

    # JSON validation
    "jsonschema>=4.20.0",

    # CLI (optional)
    "typer>=0.15.0",
    "rich>=13.0.0",

    # Voice
    "edge-tts>=6.1.0",  # TTS
    "faster-whisper>=1.0.0",  # STT

    # Observability
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-exporter-otlp>=1.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-jsonschema>=4.26.0",
    "types-redis>=4.6.0",
    "celery-types>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"app/api/**/*.py" = ["B008"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
# SQLAlchemy Column[T] vs T type mismatches - would require Mapped[T] migration
disable_error_code = ["arg-type", "assignment"]

[[tool.mypy.overrides]]
module = [
    "faster_whisper", "faster_whisper.*",
    "asyncpg", "asyncpg.*",
    "graphiti_core", "graphiti_core.*",
    "tiktoken", "tiktoken.*",
    "edge_tts", "edge_tts.*",
    "google", "google.*",
    "anthropic", "anthropic.*",
    "claude_agent_sdk", "claude_agent_sdk.*",
    "tenacity", "tenacity.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["app.tasks", "app.tasks.*"]
disable_error_code = ["misc", "no-untyped-def", "untyped-decorator", "type-arg"]

[[tool.mypy.overrides]]
module = ["app.models"]
disable_error_code = ["var-annotated"]  # SQLAlchemy Enum columns - migrate to Mapped[T] later

[[tool.mypy.overrides]]
module = ["app.services.voice", "app.services.voice.*"]
disable_error_code = ["no-untyped-def", "no-untyped-call", "attr-defined", "type-arg"]

[[tool.mypy.overrides]]
module = ["app.adapters.claude"]
disable_error_code = ["return-value", "type-arg", "no-any-return", "attr-defined"]

[[tool.mypy.overrides]]
module = ["app.services.session_cleanup"]
disable_error_code = ["attr-defined", "no-any-return", "type-arg"]

[[tool.mypy.overrides]]
module = ["app.api.analytics"]
disable_error_code = ["call-overload", "truthy-function", "type-arg"]

[[tool.mypy.overrides]]
module = ["app.services.memory", "app.services.memory.*"]
disable_error_code = ["type-arg", "no-untyped-def", "attr-defined", "no-untyped-call", "index", "return-value", "misc"]

[[tool.mypy.overrides]]
module = ["app.services.rate_limiter", "app.services.request_queue"]
disable_error_code = ["type-arg", "misc", "no-any-return", "no-untyped-def"]

[[tool.mypy.overrides]]
module = ["app.services.router"]
disable_error_code = ["type-arg", "no-any-return", "no-untyped-call", "misc", "no-untyped-def"]

[[tool.mypy.overrides]]
module = ["app.services.response_cache"]
disable_error_code = ["no-untyped-call", "no-any-return", "type-arg"]

[[tool.mypy.overrides]]
module = ["app.services.orchestration", "app.services.orchestration.*"]
disable_error_code = ["type-arg", "no-any-return", "attr-defined", "return-value"]

[[tool.mypy.overrides]]
module = ["app.middleware.access_control"]
disable_error_code = ["no-untyped-def"]

[[tool.mypy.overrides]]
module = ["app.api.admin", "app.api.sessions", "app.api.complete", "app.api.memory"]
disable_error_code = ["type-arg", "return-value", "list-item", "call-overload", "var-annotated"]

[[tool.mypy.overrides]]
module = ["app.db"]
disable_error_code = ["no-untyped-def"]

[[tool.mypy.overrides]]
module = ["app.adapters", "app.adapters.*"]
disable_error_code = ["no-any-return", "no-untyped-def", "no-untyped-call", "var-annotated", "untyped-decorator", "list-item", "attr-defined"]

[[tool.mypy.overrides]]
module = ["app.services.context_manager", "app.services.agent_service", "app.services.agent_routing", "app.services.memory_webhook_handler"]
disable_error_code = ["no-any-return", "no-untyped-call", "type-arg"]

[[tool.mypy.overrides]]
module = ["app.services.health_prober"]
disable_error_code = ["type-arg", "no-untyped-def"]

[[tool.mypy.overrides]]
module = ["app.api.access_control"]
disable_error_code = ["index", "call-overload"]

[[tool.mypy.overrides]]
module = ["app.api.db", "app.api.endpoints.voice"]
disable_error_code = ["no-any-return", "no-untyped-def"]

[[tool.mypy.overrides]]
module = ["app.middleware.kill_switch"]
disable_error_code = ["no-untyped-def"]

[[tool.mypy.overrides]]
module = ["app.services.completion"]
disable_error_code = ["import-untyped"]
